syntax = "proto3";
package pb;

import "api.proto";

message RecordKey {
  int32 nameCode = 1;
  int32 sourceCode = 2;
  int32 epochMinute = 3;
}

message RecordEntry {
  RecordKey key = 1;
  CounterValues values = 2;
}

message RecordBlock {
  map<int32, string> nameCodeMapping = 1;
  map<int32, string> sourceCodeMapping = 2;
  repeated RecordEntry entries = 3;
}
